--- a/pages/login/login.css
+++ b/pages/login/login.css
@@ -18,7 +18,7 @@ body {
 
 /* 앱 컨테이너 스타일 */
 .app-container {
-  background-image: url(./static/netflix_background.jpg);
+  background-image: url(../static/netflix_background.jpg);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
